Closed Bug 738157 Opened 12 years ago Closed 12 years ago

missing nsSubstring_h___

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: m_kato, Assigned: m_kato)

Details

Attachments

(1 file)

http://mxr.mozilla.org/mozilla-central/search?string=nsSubstring_h___

/xpcom/string/public/nsString.h (View Hg log or Hg annotations)
    line 44 -- #ifndef nsSubstring_h___
/xpcom/string/public/nsSubstringTuple.h (View Hg log or Hg annotations)
    line 42 -- #ifndef nsSubstring_h___
/xpcom/string/public/nsDependentSubstring.h (View Hg log or Hg annotations)
    line 42 -- #ifndef nsSubstring_h___

But no define on nsSubstring.h
Attached patch fixSplinter Review
Attachment #608243 - Flags: review?(dbaron)
https://hg.mozilla.org/integration/mozilla-inbound/rev/ea55576a4a1e
Assignee: nobody → m_kato
Whiteboard: [inbound]
Whiteboard: [inbound]
https://hg.mozilla.org/mozilla-central/rev/ea55576a4a1e
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.