Bug 738157 - missing nsSubstring_h___. r=dbaron