xpcom/string/public/nsSubstring.h
@@ -36,6 +36,11 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
+#ifndef nsSubstring_h___
+#define nsSubstring_h___
+
 #ifndef nsAString_h___
 #include "nsAString.h"
 #endif
+
+#endif // !defined(nsSubstring_h___)
